[package]
name = "height-mesh"
description = "A small crate to generate a 3D mesh from a 2D heightmap."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bonsairobo/height-mesh-rs"
keywords = ["graphics", "heightmap", "mesh"]

[dependencies]
ndshape = "0.1"
